--- a/index.html
+++ b/index.html
@@ -60,36 +60,92 @@
 
 <!-- Area for stories (all stories, user stories, favorites) -->
 <section id="stories-container" class="stories-container container">
-  <!-- Add Stories Form -->
-  <form action="#" id="add-story-form" class="account-form hidden">
-    <h4>Add Story</h4>
-    <!-- form fields -->
-    <button type="submit">submit</button>
-    <hr>
-  </form>
+
+<!-- Add Stories Form -->
+<form action="#" id="add-story-form" class="account-form hidden">
+  <h4>Add Story</h4>
+  <div class="author-input">
+    <label for="story-author">author</label>
+    <input id="story-author" placeholder="author name">
+  </div>
+  <div class="title-input">
+    <label for="story-title">title</label>
+    <input id="story-title" placeholder="story title">
+  </div>
+  <div class="url-input">
+    <label for="story-url">url</label>
+    <input id="story-url" placeholder="url">
+  </div>
+  <button type="submit">submit</button>
+  <hr>
+</form> 
+
+<!-- loading message (removed by JS after stories loaded) -->
+  <div id="stories-loading-msg">Loading&hellip;</div> 
+
+  <!-- List of all stories -->
+  <ol id="all-stories-list" class="stories-list "></ol>
+
+  <!-- List of stories favorited by current user -->
+  <ol id="favorited-stories-list" class="stories-list hidden"></ol>
+
+  <!-- List of users' own stories -->
+  <ol id="user-stories-list" class="stories-list hidden"></ol>
+
+
+</section>
+  
   <!-- Lists of stories -->
-  <ol id="all-stories-list" class="stories-list"></ol>
+  <!-- <ol id="all-stories-list" class="stories-list hidden"></ol>
   <ol id="favorited-stories-list" class="stories-list hidden"></ol>
   <ol id="user-stories-list" class="stories-list hidden"></ol> 
 
 
 
-</section>
+</section> -->
 
 <!-- Login and signup forms -->
+
+
 <section class="account-forms-container container">
+  <!-- Login form -->
   <form action="#" id="login-form" class="account-form hidden" method="post">
     <h4>Login</h4>
-    <!-- form fields -->
+    <div class="login-input">
+      <label for="login-username">username</label>
+      <input id="login-username" autocomplete="current-username">
+    </div>
+    <div class="login-input">
+      <label for="login-password">password</label>
+      <input id="login-password" type="password" autocomplete="current-password">
+    </div>
     <button type="submit">login</button>
     <hr>
-  </form>
-  <form action="#" id="signup-form" class="account-form hidden" method="post">
+  </form>     
+
+
+
+  <form
+      action="#"
+      id="signup-form"
+      class="account-form hidden"
+      method="post">
     <h4>Create Account</h4>
-    <!-- form fields -->
+    <div class="login-input">
+      <label for="signup-name">name</label>
+      <input id="signup-name" autocapitalize="words">
+    </div>
+    <div class="login-input">
+      <label for="signup-username">username</label>
+      <input id="signup-username" autocomplete="new-username">
+    </div>
+    <div class="login-input">
+      <label for="signup-password">password</label>
+      <input id="signup-password" autocomplete="new-password" type="password">
+    </div>
     <button type="submit">create account</button>
   </form>
-</section>
+
 
 <!-- User profile -->
 <section class="user-profile-container container">
@@ -105,7 +161,7 @@
 
 
 <!-- area for stories (all stories, user stories, favorites) -->
-<!-- <section id="stories-container" class="stories-container container">
+<!-- <section id="stories-container" class="stories-container container"> -->
 
   <!-- Add Stories Form -->
   <!-- <form action="#" id="add-story-form" class="account-form hidden">
@@ -124,7 +180,7 @@
     </div>
     <button type="submit">submit</button>
     <hr>
-  </form>
+  </form> -->
 
   <!-- loading message (removed by JS after stories loaded) -->
   <!-- <div id="stories-loading-msg">Loading&hellip;</div> -->
@@ -142,22 +198,9 @@
 <!-- </section> -->
 
 <!-- Login and signup forms -->
-<!-- <section class="account-forms-container container "> -->
+<!-- <section class="account-forms-container container ">  -->
 
-  <!-- Login form -->
-  <!-- <form action="#" id="login-form" class="account-form hidden" method="post">
-    <h4>Login</h4>
-    <div class="login-input">
-      <label for="login-username">username</label>
-      <input id="login-username" autocomplete="current-username">
-    </div>
-    <div class="login-input">
-      <label for="login-password">password</label>
-      <input id="login-password" type="password" autocomplete="current-password">
-    </div>
-    <button type="submit">login</button>
-    <hr>
-  </form> -->
+  
 
   <!-- Signup form -->
   <!-- <form
@@ -217,7 +260,8 @@
 <script src="js/main.js"></script>
 <script src="js/nav.js"></script>
 <script src="js/user.js"></script>
-<script src="js/stories.js"></script>
+<script src="js/stories.js"></script> 
+
 
 </body>
 </html>
